--- a/index.html
+++ b/index.html
@@ -2,44 +2,29 @@
 <html>
 
 <head>
-  <title>BankName - Home</title>
+  <title>OasisBank - Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/e2e56eacb7.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/e2e56eacb7.js" crossorigin="anonymous"></script>
 </head>
 
 <body class=" text-white">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">OasisBank</a>
+       <a class="navbar-brand" href="index.html"><i class="fa-solid fa-droplet fa-xl me-2" style="color: #ffffff;"></i>OasisBank</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li> -->
+
+
         </ul>
         <a class="btn btn-outline-light d-flex" href="login.html" role="button">Login/Register</a>
       </div>
@@ -61,15 +46,6 @@
           <div class="card-body">
             <h5 class="card-title">Credit Cards</h5>
             <p class="card-text">Get your own OasisBank Credit Card, and enjoy amazing offers and cashback.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
-        <div class="card">
-          <img src="images/loan.jpg" class="card-img-top" alt="Loans">
-          <div class="card-body">
-            <h5 class="card-title">Loans</h5>
-            <p class="card-text">Easy and quick loans for all your needs. Apply today for instant approval.</p>
           </div>
         </div>
       </div>
@@ -97,6 +73,15 @@
           <div class="card-body">
             <h5 class="card-title">Fast Secure Transfers</h5>
             <p class="card-text">Transfer funds seamlessly within and outside OasisBank, instantly and securely.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-lg-4 mb-4">
+        <div class="card">
+          <img src="images/loan.jpg" class="card-img-top" alt="Loans">
+          <div class="card-body">
+            <h5 class="card-title">Loans</h5>
+            <p class="card-text">Easy and quick loans for all your needs. Apply today for instant approval.</p>
           </div>
         </div>
       </div>
