--- a/register.html
+++ b/register.html
@@ -2,31 +2,29 @@
 <html>
 
 <head>
-  <title>BankName - Login</title>
+  <title>OasisBank - Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/e2e56eacb7.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/e2e56eacb7.js" crossorigin="anonymous"></script>
 </head>
 
 <body class=" text-white">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">SogyBank</a>
+             <a class="navbar-brand" href="index.html"><i class="fa-solid fa-droplet fa-xl me-2" style="color: #ffffff;"></i>OasisBank</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
+
+
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
@@ -68,7 +66,7 @@
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password1" required >
+        <input type="password" class="form-control" id="password1" required>
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
@@ -78,7 +76,16 @@
       <button type="submit" class="btn">Register</button>
       <a class="ms-5" href="login.html" role="button">Have an account? Login Here</a>
     </form>
+
+
+    <div class="alert alert-success alert-dismissible fade show mt-3" role="alert" id="alert" hidden>
+      <i class="fa-regular fa-circle-check fa-xl"></i>
+      Your Registration was successfull, please wait for the bank to send confirmation.
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
   </div>
+
   <script src="js/register.js"></script>
 </body>
 
